--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -3,7 +3,7 @@ h1 {
   line-height: 1.1;
 }
 
-.header-container {
+.headerContainer {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -15,7 +15,7 @@ h1 {
   overflow: hidden;
 }
 
-.header-stinga {
+.headerStinga {
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -40,7 +40,7 @@ h1 {
     letter-spacing: 5.2px;
 }
 
-.promotii-btn {
+.promotiiBtn {
   width: 156px;
   height: 40px;
   background-color: white;
@@ -54,7 +54,7 @@ h1 {
   padding: 0; 
 }
 
-.header-stinga a {
+.headerStinga a {
   text-decoration: none;
 }
 
@@ -64,14 +64,14 @@ h1 {
   font-size: 24px;
 }
 
-.header-dreapta {
+.headerDreapta {
   flex: 1;
   display: flex;
   justify-content: center;
   position: relative;
 } 
  
-.cerc-decorativ {
+.cercDecorativ {
   width: 450px; 
   height: 450px;
   background-color: #d9e8d1; 
