--- a/src/Components/ProduseCardPage/ProduseCardPage.css
+++ b/src/Components/ProduseCardPage/ProduseCardPage.css
@@ -12,24 +12,24 @@
     font-family: 'Open Sans', sans-serif;
 }
 
-.rind-invers {
+.rindInvers {
     flex-direction: row-reverse;
     gap: 50px;
 }
 
-.produse-card-stinga,
-.produse-card-dreapta {
+.produseCardStinga,
+.produseCardDreapta {
     flex: 1;
     display: flex;
     flex-direction: column;
 }
 
-.produse-card-stinga {
+.produseCardStinga {
     justify-content: center;
     align-items: center;
 }
 
-.produse-card-img {
+.produseCardImg {
     width: 100%;
     max-width: 550px;
     height: auto;
@@ -37,7 +37,7 @@
     display: block;
 }
 
-.text-card-denumire {
+.textCardDenumire {
     font-size: 56px;
     font-weight: 700;
     line-height: 1.1;
@@ -46,7 +46,7 @@
     color: #1a1a1a;
 }
 
-.text-card-descriere {
+.textCardDescriere {
     font-size: 18px;
     line-height: 1.6;
     margin: 0 0 30px 0;
@@ -54,7 +54,7 @@
     font-family: 'Open Sans', sans-serif;
 }
 
-.afiseaza-card-btn {
+.afiseazaCardBtn {
     width: fit-content;
     padding: 12px 32px;
     font-size: 15px;
@@ -67,7 +67,7 @@
     transition: all 0.3s ease;
 }
 
-.afiseaza-card-btn:hover {
+.afiseazaCardBtn:hover {
     background: #333;
     color: white;
 }
